--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-- <script>window.location.href="index.php";</script> -->
+<script>window.location.href="index.php";</script>
 
-
+<!--
 <!DOCTYPE HTML>
 <!--
 	Prologue by HTML5 UP
@@ -278,3 +278,4 @@ waves as diffraction grating. <a href="pdfs/Report_IISER.pdf" target="_blank">(P
 	</body>
 </html>
 
+-->
