--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<script>window.location.href="index.php";</script>
+<html><script>window.location.href="index.php";</script></html>
 
-<!--
+
 <!DOCTYPE HTML>
 <!--
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+	
+<!--
 <html>
 	<head>
 		<title>Amlan Datta</title>
