--- a/index.html
+++ b/index.html
@@ -1,4 +1,41 @@
-<html><script>window.location.href="index.php";</script></html>
+<!-- <script>window.location.href="index.php";</script></html> -->
+<?php
+
+    $myemail = $name = $email = $msg = $subject = $headers = "";
+
+    if(isset($_POST['submit'])) {
+        if($_POST['submit'] == "submit") {
+
+            $myemail="ad16ms156@iiserkol.ac.in";
+            $name = strip_tags($_POST['name']);
+            $email = strip_tags($_POST['email']);
+            $msg = strip_tags($_POST['message']);
+            $subject = "Personal website data";
+
+            $headers =  'From: '.$email."\r\n".
+            $headers .= 'X-Mailer: PHP/' . phpversion().
+            $headers .= "Content-type: text/html; charset=iso-8859-1\r\n"; 
+            $sucess_msg = "Here is success msg";
+
+            if(filter_var($email, FILTER_VALIDATE_EMAIL)) {
+                $mail_send = mail($myemail, $subject, $message, $headers);
+                if($mail_send) {
+                    echo "<script>alert('".$sucess_msg."');
+                     window.location.href='index.html';</script>";
+                } else {
+                    echo "<script>alert('This is embarassing, but seems that something went wrong. Please try again.');
+                     window.location.href='index.html';</script>";
+                }
+            } else {
+                echo "<script>alert('Please enter a valid email address');
+                     window.location.href='index.html';</script>";
+            }
+
+        }
+    }
+
+?>
+
 
 
 <!DOCTYPE HTML>
@@ -7,9 +44,6 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-
-	
-<!--
 <html>
 	<head>
 		<title>Amlan Datta</title>
@@ -90,7 +124,7 @@
 
 							<a href="#" class="image featured"><img src="images/me.jpg" alt="" /></a>
 
-							<p>I am a first year graduate student(Doctoral) doing my PhD in Physics with specialization in superconductivity in the Department of Physics and Astronomy at Iowa State University, Ames, (<a href="https://www.physastro.iastate.edu/" target="_blank">ISU</a>), USA. I am currently working in the  Superconductivity and Magnetism Low-Temperature Laboratory group
+							<p>I am a first year graduate student pursuing PhD in Physics with specialization in superconductivity in the Department of Physics and Astronomy at Iowa State University, Ames, (<a href="https://www.physastro.iastate.edu/" target="_blank">ISU</a>), USA. I am currently working in the  Superconductivity and Magnetism Low-Temperature Laboratory group
 								<a href="https://supermaglab.physics.iastate.edu/" target="_blank">SUPERMAGLAB</a>.</p>
 							<ul class="actions">
 								<a target="_blank" href="pdfs/CV_Amlan.pdf" <button class="button1" style="vertical-align:middle"><span>Download My CV</span></button> ></a>
@@ -106,8 +140,9 @@
 								<h2>Educational Qualifications</h2>
 							</header>
 							<ul style="list-style-type:disc;">
-								  <li>Presently a <strong> Fifth-Year student of 5 years BS-MS Dual Degree Program </strong> (2016-2021) at IISER
-										Kolkata, West Bengal, India. (Admitted through JEE Advanced (2016) Channel)
+								  <li> Presently a <strong>First-year Graduate student of PhD Program in the Department of Physics and Astronomy at ISU, Ames, Iowa, USA.
+							          </li>
+								  <li><strong>BS-MS(Physics)</strong> (2016-2021) from IISER Kolkata, West Bengal, India. (Admitted through JEE Advanced (2016) Channel)
 								  </li>
 								  <li><strong>Higher Secondary (10+2)</strong>: Burdwan CMS High School, West Bengal, India. 
 								  <strong>(West Bengal Board of Highrer Secondary Education)</strong> Marks obtained: 90%</li>
@@ -127,7 +162,7 @@
 							</header>
 							<ol type="1">
 								<li><h1>MS project under <strong><a href="https://www.iiserkol.ac.in/~rangeet/" target="_blank">Dr. Rangeet Bhattacharyya</a>, IISER Kolkata, India</strong> since August 2020.</h1>
-								  <p><strong>Topic:</strong> Spin Noise in Open Quantum System</p></li>
+								  <p><strong>Topic:</strong> A Master Equation Approach to Spin Noise</p></li>
 								 <li><h1>Independent study under <strong><a href="https://www.iiserkol.ac.in/~nghosh/nghosh.php" target="_blank"> Dr. Nirmalya Ghosh</a>, IISER Kolkata, India
 </strong> since August 2020.</h1><p><strong>Topic:</strong> Weak Measurements in Optics. (Slides to be uploaded soon)</p>
 								  </li>
@@ -280,5 +315,3 @@ waves as diffraction grating. <a href="pdfs/Report_IISER.pdf" target="_blank">(P
 
 	</body>
 </html>
-
--->
