--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- <script>window.location.href="index.php";</script></html> -->
-<?php
+<!--<?php
 
     $myemail = $name = $email = $msg = $subject = $headers = "";
 
@@ -34,7 +34,7 @@
         }
     }
 
-?>
+?>-->
 
 
 
