--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ waves as diffraction grating. <a href="pdfs/Report_IISER.pdf" target="_blank">(P
 								<h2>Contact</h2>
 							</header>
 							<p> I am available at:<br>
-							<i class="icon solid fa-envelope"></i>&nbsp; <a href="mailto:ad16ms156@iiserkol.ac.in">ad16ms156@iiserkol.ac.in</a> &nbsp;&nbsp;  <span class="icon solid fa-envelope">  </span> &nbsp;<a href="mailto:pikuamlan@gmail.com">pikuamlan@gmail.com</a>
+							<i class="icon solid fa-envelope"></i>&nbsp; <a href="mailto:adatta@iastate.edu">adatta@iastate.edu</a> &nbsp;&nbsp;  <span class="icon solid fa-envelope">  </span> &nbsp;<a href="mailto:pikuamlan@gmail.com">pikuamlan@gmail.com</a>
 						<br>
 								<i class="icon solid fa-phone">&nbsp;+1 5157156903&nbsp;+91 97349 75910,&nbsp;(<i class="fab fa-whatsapp"></i>)</i>
 						<br>
