--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ waves as diffraction grating. <a href="pdfs/Report_IISER.pdf" target="_blank">(P
 							<p> I am available at:<br>
 							<i class="icon solid fa-envelope"></i>&nbsp; <a href="mailto:adatta@iastate.edu">adatta@iastate.edu</a> &nbsp;&nbsp;  <span class="icon solid fa-envelope">  </span> &nbsp;<a href="mailto:pikuamlan@gmail.com">pikuamlan@gmail.com</a>
 						<br>
-								<i class="icon solid fa-phone">&nbsp;+1 5157156903(<i class="fab fa-whatsapp"></i>)&nbsp;+91 97349 75910,&nbsp;</i>
+								<i class="icon solid fa-phone">&nbsp;+1 5157156903(<i class="fab fa-whatsapp"></i>)&nbsp;,+91 97349 75910&nbsp;</i>
 						<br>
 							<i class="fas fa-university"></i>&nbsp;F-105, ICV Hall, IISER Kolkata, Mohanpur, Nadia, West Bengal 741246, India.
 							</p>
