--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 							<a href="#" class="image featured"><img src="images/me.jpg" alt="" /></a>
 
-							<p>I am a first year graduate student pursuing PhD in Physics with specialization in superconductivity in the Department of Physics and Astronomy at Iowa State University, Ames, (<a href="https://www.physastro.iastate.edu/" target="_blank">ISU</a>), USA. I am currently working in the  Superconductivity and Magnetism Low-Temperature Laboratory group
+							<p>I am a third year graduate student pursuing PhD in Physics with specialization in superconductivity in the Department of Physics and Astronomy at Iowa State University, Ames, (<a href="https://www.physastro.iastate.edu/" target="_blank">ISU</a>), USA. I am currently working in the  Superconductivity and Magnetism Low-Temperature Laboratory group
 								<a href="https://supermaglab.physics.iastate.edu/" target="_blank">SUPERMAGLAB</a>.</p>
 							<ul class="actions">
 								<a target="_blank" href="pdfs/CV_Amlan.pdf" <button class="button1" style="vertical-align:middle"><span>Download My CV</span></button> ></a>
