Change in formHandler

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ waves as diffraction grating. <a href="pdfs/Report_IISER.pdf" target="_blank">(P
 							<i class="fas fa-university"></i>&nbsp;F-105, ICV Hall, IISER Kolkata, Mohanpur, Nadia, West Bengal 741246, India.
 							</p>
 
-							<form method="post" action="">
+							<form method="post" action="formHandler.php">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
